# bmrk

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/bmrk/: bookmarker.py  cli.py  detector.py
tests/: test_bookmarker.py  test_cli.py  test_detector.py
