[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bmrk"
version = "0.1.1"
description = "Add navigable bookmarks to a PDF based on its heading structure."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["pdf", "bookmarks", "toc", "outline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9",
    "pymupdf>=1.24",
    "pypdf>=4.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/AnvarAtayev/bmrk"
Issues = "https://github.com/AnvarAtayev/bmrk/issues"

[project.scripts]
bmrk = "bmrk.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4", "ipykernel>=6.0"]
ocr = ["ocrmypdf>=16.0"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "D"]
extend-select = ["D213"]
ignore = ["D100", "D212", "D104"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D101", "D102", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["bmrk"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
